# loss72-platemaker

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
crates/construct/: Cargo.toml
crates/construct/src/: copy.rs  files.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: fs.rs  lib.rs  log.rs  model.rs  util.rs
crates/core/src/fs/: dir.rs  file.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: emoji.rs  frontmatter.rs  lib.rs  parse.rs
crates/markdown/src/parse/: control.rs  full_service.rs  sub_parser.rs
crates/markdown/src/parse/sub_parser/: code_block.rs  footnote.rs  frontmatter.rs  link_card.rs  text.rs
crates/structure/: Cargo.toml
crates/structure/src/: lib.rs  template.rs
crates/template/: Cargo.toml
crates/template/src/: lib.rs
crates/website/: Cargo.toml
crates/website/src/: articles.rs  lib.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: ai.rs  article_type.rs  lib.rs  sources.rs
